refactor service exchange